# wazirx-data-extractor

./: LICENSE  README.org  config.cfg  extract.py  pyproject.toml
