[tool.poetry]
name = "wazirx-data-extractor"
version = "0.1.0"
description = ""
authors = ["Sidharth Arya <sidhartharya10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
configparser = "^5.0.2"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
